# agent-commerce-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  LEGAL.md  README.md  main.py  pyproject.toml  requirements.txt
app/models/: schemas.py
app/tools/: gemini_normalizer.py  web_search.py
app/utils/: dependencies.py  guardian.py  trust_metrics.py
app/utils/utils/: guardian.py
tests/: test_api.py
